--- a/flink-runtime-web/web-dashboard/web/partials/taskmanager/taskmanager.metrics.html
+++ b/flink-runtime-web/web-dashboard/web/partials/taskmanager/taskmanager.metrics.html
@@ -36,10 +36,10 @@ limitations under the License.
         <td>{{ metrics.dataPort }}</td>
         <td>{{ metrics.slotsNumber }}</td>
         <td>{{ metrics.freeSlots }}</td>
-        <td>{{ metrics.cpuCores }}</td>
-        <td>{{ metrics.physicalMemory | humanizeBytes }}</td>
-        <td>{{ metrics.freeMemory | humanizeBytes }}</td>
-        <td>{{ metrics.managedMemory | humanizeBytes }}</td>
+        <td>{{ metrics.hardware.cpuCores }}</td>
+        <td>{{ metrics.hardware.physicalMemory | humanizeBytes }}</td>
+        <td>{{ metrics.hardware.freeMemory | humanizeBytes }}</td>
+        <td>{{ metrics.hardware.managedMemory | humanizeBytes }}</td>
       </tr>
     </tbody>
   </table>
