[FLINK-7862] Change web ui to calculate total memory from heap and non-heap data

--- a/flink-runtime-web/web-dashboard/app/partials/taskmanager/taskmanager.metrics.jade
+++ b/flink-runtime-web/web-dashboard/app/partials/taskmanager/taskmanager.metrics.jade
@@ -60,9 +60,9 @@ div(ng-if="metrics.id")
         td {{ metrics.metrics.nonHeapMax | humanizeBytes }}
       tr
         td Total
-        td {{ metrics.metrics.totalCommitted | humanizeBytes }}
-        td {{ metrics.metrics.totalUsed | humanizeBytes }}
-        td {{ metrics.metrics.totalMax | humanizeBytes }}
+        td {{ metrics.metrics.heapCommitted + metrics.metrics.nonHeapCommitted | humanizeBytes }}
+        td {{ metrics.metrics.heapUsed + metrics.metrics.nonHeapUsed | humanizeBytes }}
+        td {{ metrics.metrics.heapMax + metrics.metrics.nonHeapMax | humanizeBytes }}
 
   h2 Outside JVM
   table.table.table-properties
